Add DiceBear avatars
