# lib/api-spec/openapi.yaml
@@ -383,6 +383,8 @@ components:
     SaveBookBody:
       type: object
       properties:
+        id:
+          type: integer
         external_id:
           type: string
         source:
@@ -533,6 +535,9 @@ components:
           type: string
         author:
           type: string
+        author_avatar_seed:
+          type: string
+          nullable: true
         text:
           type: string
         reply_to:
@@ -582,6 +587,8 @@ components:
       type: object
       properties:
         author:
+          type: string
+        author_avatar_seed:
           type: string
         text:
           type: string
